--- a/Reservia/index2.html
+++ b/Reservia/index2.html
@@ -39,27 +39,25 @@
                 </div>
                 <input class="search-btn-input" type="text" value="Marseille, France">
                 <div class="search-btn-icon-right-container">
-                    <i class="fas fa-search search-btn-icon-right"></i>
+                    <p class="search-btn-right">Rechercher</p>
                 </div>
             </div>
             <div class="filter_container">
                 <h3 class=title_filter>Filtres</h3>
-                <div class="filters">
-                    <div class="icon-money">
-                        <i class="fas fa-money-bill-wave icon-money"></i>
-                        <p>Economique</p>
-                    </div>
-                    <div class="icon-family">
-                        <i class="fa fa-child icon-family"></i>
-                        <p>Familial</p>
-                    </div>
+                <div class="icon-container">
+                    <i class="fas fa-money-bill-wave"></i>
+                    <p>Economique</p>
                 </div>
-                <div class="icon-romantic">
-                    <i class="fa fa-heart icon-romantic"></i>
+                <div class="icon-container">
+                    <i class="fa fa-child"></i>
+                    <p>Familial</p>
+                </div>
+                <div class="icon-container">
+                    <i class="fa fa-heart"></i>
                     <p>Romantique</p>
                 </div>
-                <div class="icon-pet">
-                    <i class="fas fa-dog icon-pet"></i>
+                <div class="icon-container">
+                    <i class="fas fa-dog"></i>
                     <p>Animaux autorisés</p>
                 </div>
             </div>
@@ -172,7 +170,8 @@
                     </div>
                 </div>
                 <div class="item-container-famous">
-                    <div style="background-image: url(images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)" class="img-hebergement img"></div>
+                    <div style="background-image: url(images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)"
+                        class="img-hebergement img"></div>
                     <div class="title-price-stars-item-container">
                         <h4>Hôtel Le soleil du matin</h4>
                         <p>Nuit à partir de 128€</p>
@@ -186,7 +185,8 @@
                     </div>
                 </div>
                 <div class="item-container-famous">
-                    <div style="background-image: url(images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg)" class="img-hebergement img"></div>
+                    <div style="background-image: url(images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg)"
+                        class="img-hebergement img"></div>
                     <div class="title-price-stars-item-container">
                         <h4>Au coeur de l'eau Chambres d'hôtes</h4>
                         <p>Nuit à partir de 71€</p>
@@ -202,7 +202,8 @@
                     </div>
                 </div>
                 <div class="item-container-famous">
-                    <div style="background-image: url(images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg)" class="img-hebergement img img-3"></div>
+                    <div style="background-image: url(images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg)"
+                        class="img-hebergement img img-3"></div>
                     <div class="title-price-stars-item-container">
                         <h4>Hôtel Tout bleu et Blanc</h4>
                         <p>Nuit à partir de 68€</p>
@@ -256,22 +257,28 @@
     <!--fin de ma 3eme section-->
     <footer>
         <div id="bloc_informations">
-            <h4>A propos</h4>
-            <ul>
-                <li>Fonctionnement du site</li>
-                <li>Conditions générales de vente</li>
-                <li>Données et confidentialité</li>
-            </ul>
-            <h4>Nos hébergements</h4>
-            <ul>
-                <li>Charte qualité</li>
-                <li>Soumettre votre hôtel</li>
-            </ul>
-            <h4>Assistance</h4>
-            <ul>
-                <li>Centre d'aide</li>
-                <li>Nous contacter</li>
-            </ul>
+            <div class="about">
+                <h4>A propos</h4>
+                <ul>
+                    <li>Fonctionnement du site</li>
+                    <li>Conditions générales de vente</li>
+                    <li>Données et confidentialité</li>
+                </ul>
+            </div>
+            <div class="our-flat">
+                <h4>Nos hébergements</h4>
+                <ul>
+                    <li>Charte qualité</li>
+                    <li>Soumettre votre hôtel</li>
+                </ul>
+            </div>
+            <div class="help">
+                <h4>Assistance</h4>
+                <ul>
+                    <li>Centre d'aide</li>
+                    <li>Nous contacter</li>
+                </ul>
+            </div>
         </div>
     </footer>
     </div>
