--- a/Reservia/index.html
+++ b/Reservia/index.html
@@ -74,7 +74,7 @@
     </div>
     </section>
     <section>
-        <div class="flat-poulaires-container">
+        <div class="flat-populaires-container">
             <aside class="populaires_container">
                 <div class="populaires_title">
                     <h3 class="title">Les plus populaires</h3>
@@ -86,7 +86,7 @@
                     <div class="img-hebergement img-1"></div>
                     <div class=" title-price-stars-item-container">
                         <h4>Hôtel Le soleil du matin</h4>
-                        <p>Nuit à partir de 128€</p>
+                        <p>Nuit à partir de 128<strong>€</strong></p>
                         <div class="stars-famous">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -100,7 +100,7 @@
                     <div class="img-hebergement img-2"></div>
                     <div class=" title-price-stars-item-container">
                         <h4>Au coeur de l'eau Chambres d'hôtes</h4>
-                        <p>Nuit à partir de 71€</p>
+                        <p>Nuit à partir de 71<strong>€</strong></p>
                         <div class="stars-famous">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -116,7 +116,7 @@
                     <div class="img-hebergement img-3"></div>
                     <div class=" title-price-stars-item-container">
                         <h4>Hôtel Tout bleu et Blanc</h4>
-                        <p>Nuit à partir de 68€</p>
+                        <p>Nuit à partir de 68<strong>€</strong></p>
                         <div class="stars-famous">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -129,9 +129,8 @@
                     </div>
                 </div>
             </aside>
-
-            <h2 class="title-container-flat">Hébergements à Marseille</h2>
             <div class="flat-container">
+                <h2 class="title-container-flat">Hébergements à Marseille</h2>
                 <div class="item__container">
                     <div class="img-flat img-4"></div>
                     <div class="title-price-stars-flat-container">
@@ -142,7 +141,9 @@
                             <i class="fa fa-star filled_star"></i>
                             <i class="fa fa-star filled_star"></i>
                             <i class="fa fa-star filled_star"></i>
-                            <i class="fa fa-star empty_star"></i>
+                            <div class="empty_star">
+                                <i class="fa fa-star empty_star"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -150,7 +151,7 @@
                     <div class="img-flat img-5"></div>
                     <div class="title-price-stars-flat-container">
                         <h4>Hôtel du port</h4>
-                        <p>Nuit à partir de 52€</p>
+                        <p>Nuit à partir de 52<strong>€</strong></p>
                         <div class="stars">
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
@@ -164,13 +165,15 @@
                     <div class="img-flat img-6"></div>
                     <div class="title-price-stars-flat-container">
                         <h4>Hôtel les mouettes</h4>
-                        <p>Nuit à partir de 76€</p>
+                        <p>Nuit à partir de 76<strong>€</strong></p>
                         <div class="stars">
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
-                            <i class="fa fa-star empty_star"></i>
+                            <div class="empty_star">
+                                <i class="fa fa-star empty_star"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -178,13 +181,15 @@
                     <div class="img-flat img-7"></div>
                     <div class="title-price-stars-flat-container">
                         <h4>Hôtel de la mer</h4>
-                        <p>Nuit à partir de 46€</p>
+                        <p>Nuit à partir de 46<strong>€</strong></p>
                         <div class="stars">
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
-                            <i class="fa fa-star empty_star"></i>
-                            <i class="fa fa-star empty_star"></i>
+                            <div class="empty_star">
+                                <i class="fa fa-star empty_star"></i>
+                                <i class="fa fa-star empty_star"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -192,13 +197,15 @@
                     <div class="img-flat img-8"></div>
                     <div class="title-price-stars-flat-container">
                         <h4>Auberge le panier</h4>
-                        <p>Nuit à partir de 23€</p>
+                        <p>Nuit à partir de <strong>23€</strong></p>
                         <div class="stars">
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
-                            <i class="fa fa-star empty_star"></i>
+                            <div class="empty_star">
+                                <i class="fa fa-star empty_star"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -206,7 +213,7 @@
                     <div class="img-flat img-9"></div>
                     <div class="title-price-stars-flat-container">
                         <h4>Hôtel chez Amina</h4>
-                        <p>Nuit à partir de 96€</p>
+                        <p>Nuit à partir de 96<strong>€</strong></p>
                         <div class="stars">
                             <i class="fa fa-star filled star"></i>
                             <i class="fa fa-star filled star"></i>
@@ -216,9 +223,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="show-more">
-                <strong>Afficher plus</strong>
+                <div class="show-more">
+                    <strong>Afficher plus</strong>
+                </div>
             </div>
         </div>
     </section>
@@ -261,22 +268,28 @@
     <!--fin de ma 3eme section-->
     <footer>
         <div id="bloc_informations">
-            <h4>A propos</h4>
-            <ul>
-                <li>Fonctionnement du site</li>
-                <li>Conditions générales de vente</li>
-                <li>Données et confidentialité</li>
-            </ul>
-            <h4>Nos hébergements</h4>
-            <ul>
-                <li>Charte qualité</li>
-                <li>Soumettre votre hôtel</li>
-            </ul>
-            <h4>Assistance</h4>
-            <ul>
-                <li>Centre d'aide</li>
-                <li>Nous contacter</li>
-            </ul>
+            <div class="about">
+                <h4>A propos</h4>
+                <ul>
+                    <li>Fonctionnement du site</li>
+                    <li>Conditions générales de vente</li>
+                    <li>Données et confidentialité</li>
+                </ul>
+            </div>
+            <div class="our-flat">
+                <h4>Nos hébergements</h4>
+                <ul>
+                    <li>Charte qualité</li>
+                    <li>Soumettre votre hôtel</li>
+                </ul>
+            </div>
+            <div class="Assistance">
+                <h4>Assistance</h4>
+                <ul>
+                    <li>Centre d'aide</li>
+                    <li>Nous contacter</li>
+                </ul>
+            </div>
         </div>
     </footer>
     </div>
